--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,11 @@
             <artifactId>spring-kafka</artifactId>
             <version>3.1.4</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.firebase</groupId>
+            <artifactId>firebase-admin</artifactId>
+            <version>9.2.0</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
