--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,13 @@
 version: '3'
 services:
   volunteer-app:
-    image: volunteer-springboot-app
     build:
       context: .
       dockerfile: Dockerfile
-    ports: # 80 web and 9090 mobile
-      - "80:8080"
-      - "9090:8080"
+    image: volunteer-springboot-app
+    ports:
+      - "80:8080"   # acesso web público via porta 80
+      - "9090:8080" # porta alternativa para mobile/testes
+    environment:
+      - SPRING_PROFILES_ACTIVE=prod
+    restart: unless-stopped
