--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,6 +21,12 @@ spring:
     open-in-view: false
 
   management:
+    # Desabilita métricas que quebram no container slim
+    metrics:
+      enable:
+        processors: false
+        jvm: false
+        system: false
     endpoints:
       web:
         exposure:
