--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -8,3 +8,11 @@ spring:
     show-sql: true
     properties:
       hibernate.format_sql: false
+
+  # Desabilita métricas que quebram no container slim
+  management:
+    metrics:
+      enable:
+        processors: false
+        jvm: false
+        system: false
